Oppdatert for 5 utviklere søkes til Stavanger. Også satt språk til Norsk, samt benyttet Raleway fontene som er tilpasset Knowit sin typefontpreferanse.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="no">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-    <title>ER DU FRONTENDER &amp; KLAR FOR Å JOBBE MED DE FLINKESTE FOLKENE OG DE FETESTE PROSJEKTENE?!</title>
+    <title>ER DU FRONTENDER OG KAN REACT &amp; KLAR FOR Å JOBBE MED DE FLINKESTE FOLKENE OG DE FETESTE PROSJEKTENE?!</title>
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway" />
     <link rel="stylesheet" href="dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="dist/css/font-awesome.min.css">
+    <script src="analytics.js"></script>
   </head>
   <body>
     <div id="typeform-window">
@@ -16,8 +18,8 @@
     <section class="banner">
       <div class="overlay">
         <div class="content center-vertical"><img src="img/knowit_logo.png" alt="KNOWIT" class="knowit_logo">
-          <h5>LEDIG STILLING</h5>
-          <h1>ER DU FRONTENDER &amp; KLAR FOR Å JOBBE MED DE FLINKESTE FOLKENE OG DE FETESTE PROSJEKTENE?!</h1>
+          <h2>FEM LEDIGE STILLINGER I STAVANGER</h2><br/>
+          <h1>ER DU FRONTENDER ELLER MOBILUTVIKLER, KAN REACT, OG ER KLAR FOR Å JOBBE MED DE FLINKESTE FOLKENE OG DE FETESTE PROSJEKTENE?!</h1>
           <div class="arrow fa fa-angle-down"></div>
         </div>
       </div>
@@ -25,7 +27,8 @@
     <section class="hva-ser-vi-etter">
       <div class="content center-vertical">
         <h1 class="text-left">Hva ser vi etter hos deg?</h1>
-        <p class="text-left opacity7">Vi er på jakt etter deg som mener verden fremdeles har til gode å se de beste løsningene innen teknologi og kommunikasjon. Hos oss har vi et høyt faglig fokus i uformelle omgivelser, kort vei til sjefen og en kultur for innovasjon.</p>
+        <p class="text-left opacity7">Vi er på jakt etter deg som mener verden fremdeles har til gode å se de beste løsningene innen teknologi og kommunikasjon. Hos oss har vi et høyt faglig fokus i uformelle omgivelser, kort vei til sjefen og en kultur for innovasjon.
+        Du må være villig til å være i Oslo i en periode i oppstartsfasen (4-6 uker), deretter vil din base være i Stavanger, men med enkelte reiser til Oslo.</p>
         <div class="text-left">
           <div class="vline"></div>
           <ul class="experiences">
@@ -33,7 +36,15 @@
               <div class="list-style">
                 <div class="row">
                   <div class="col-md-4 opacity7">Erfaring</div>
-                  <div class="col-md-8"><b>Mer enn 2 års erfaring med utvikling av brukergrensesnitt/webapplikasjoner.</b></div>
+                  <div class="col-md-8"><b>Mer enn 3 års erfaring med utvikling av brukergrensesnitt/webapplikasjoner. Spesifikk kompetanse innen rammeverket React, alternativt at du er en dyktig native mobilutvikler for Android eller iOS plattformen.</b></div>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="list-style">
+                <div class="row">
+                  <div class="col-md-4 opacity7">Tekniske rammeverk</div>
+                  <div class="col-md-8"><b>Kunnskap om <strong>JavaScript, HTML, CSS</strong> og moderne rammeverk.</b></div>
                 </div>
               </div>
             </li>
@@ -41,7 +52,7 @@
               <div class="list-style">
                 <div class="row">
                   <div class="col-md-4 opacity7">Språk</div>
-                  <div class="col-md-8"><b>Kunnskap om <strong>JavaScript, HTML, CSS</strong> og moderne rammeverk.</b></div>
+                  <div class="col-md-8"><b>Du må beherske Norsk muntlig flytende og ha en god fremstillingsevne for Norsk skriftlig.</b></div>
                 </div>
               </div>
             </li>
@@ -57,14 +68,22 @@
               <div class="list-style">
                 <div class="row">
                   <div class="col-md-4 opacity7">Fordel</div>
-                  <div class="col-md-8"><b>ES2015/ES6, PostCSS/SASS, React, Redux, Webpack, Karma, Jasmine/Mocha, ESLint, Backend-utvikling</b></div>
+                  <div class="col-md-8"><b>ES2015/ES6, PostCSS/SASS, Redux, Webpack, Karma, Jasmine/Mocha, ESLint, Angular 2, Native iOS, Native Android</b></div>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="list-style">
+                <div class="row">
+                  <div class="col-md-4 opacity7">Tiltredelse / Start</div>
+                  <div class="col-md-8"><b>Umiddelbart</b></div>
                 </div>
               </div>
             </li>
           </ul>
         </div>
         <div class="vspace-top-small"></div>
-        <div class="soknad-knapp round-button"><a href="http://app.jobvite.com/m?3v7ZZiwn" target="_blank">SEND INN DIN SØKNAD</a></div>
+        <div class="soknad-knapp round-button"><a href="https://app.jobvite.com/j?aj=oIxj4fwm&s=knowit" target="_blank">SEND INN DIN SØKNAD</a></div>
         <div class="arrow fa fa-angle-down"></div>
       </div>
     </section>
@@ -198,7 +217,7 @@
             <div class="tillegg-box">
               <div class="icon fa fa-map-marker"></div>
               <h5>LOKASJON</h5>
-              <div class="box text-small">Lokaler midt i Oslo sentrum!</div>
+              <div class="box text-small">Lokaler i gangavstand til Stavanger sentrum!</div>
             </div>
           </div>
           <div class="col-xs-6 col-md-4">
@@ -233,7 +252,7 @@
             <div class="tillegg-box">
               <div class="icon fa fa-beer"></div>
               <h5>ETTER JOBB</h5>
-              <div class="box text-small">Vi har aktiviteter fra dronebygging til øl-brygging.</div>
+              <div class="box text-small">Vi har fagsamlinger hvert kvartal. Det siste var å lage ditt eget smarthjem med Pine64 og Z-Wave. Det neste blir om kunstig intelligens.</div>
             </div>
           </div>
         </div>
@@ -244,12 +263,11 @@
         <h5>DETTE ER OSS</h5>
         <h2>Hos oss finner du folk som er lidenskapelig glad i faget sitt og elsker å lage nyskapende løsninger. Vi jobber tverrfaglig og elsker å utfordre oss selv. Bli en del av teamet!</h2>
         <div class="vspace-top-small"></div>
-        <div class="soknad-knapp round-button"><a href="http://app.jobvite.com/m?3v7ZZiwn" target="_blank"> SEND INN DIN SØKNAD</a></div>
+        <div class="soknad-knapp round-button"><a href="https://app.jobvite.com/j?aj=oIxj4fwm&s=knowit" target="_blank">SEND INN DIN SØKNAD</a></div>
       </div>
     </section>
     <script src="dist/js/jquery-1.12.3.min.js"></script>
     <script src="dist/js/bootstrap.min.js"></script>
     <script src="script.js"></script>
-    <script src="analytics.js"></script>
   </body>
 </html>
