--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="overlay">
         <div class="content center-vertical"><img src="img/knowit_logo.png" alt="KNOWIT" class="knowit_logo">
           <h2>FEM LEDIGE STILLINGER I STAVANGER</h2><br/>
-          <h1>ER DU FRONTENDER ELLER MOBILUTVIKLER, KAN REACT, OG ER KLAR FOR Å JOBBE MED DE FLINKESTE FOLKENE OG DE FETESTE PROSJEKTENE?!</h1>
+          <h1>Er du frontender eller mobilutvikler, kan React, og er klar for å jobbe med de flinkeste folkene og de feteste prosjektene?</h1>
           <div class="arrow fa fa-angle-down"></div>
         </div>
       </div>
@@ -36,7 +36,7 @@
               <div class="list-style">
                 <div class="row">
                   <div class="col-md-4 opacity7">Erfaring</div>
-                  <div class="col-md-8"><b>Mer enn 3 års erfaring med utvikling av brukergrensesnitt/webapplikasjoner. Spesifikk kompetanse innen rammeverket React, alternativt at du er en dyktig native mobilutvikler for Android eller iOS plattformen.</b></div>
+                  <div class="col-md-8"><b>Mer enn 3 års erfaring med utvikling av brukergrensesnitt/webapplikasjoner. Spesifikk kompetanse innen rammeverket React, alternativt at du er en dyktig native mobilutvikler for Android eller iOSplattformen.</b></div>
                 </div>
               </div>
             </li>
