--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <div class="list-style">
                 <div class="row">
                   <div class="col-md-4 opacity7">Språk</div>
-                  <div class="col-md-8"><b>Du må beherske Norsk muntlig flytende og ha en god fremstillingsevne for Norsk skriftlig.</b></div>
+                  <div class="col-md-8"><b>Du må beherske norsk muntlig flytende og ha en god fremstillingsevne for norsk skriftlig.</b></div>
                 </div>
               </div>
             </li>
